<resources>
    <string name="app_name">SoundMe</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->

    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="error_email_invalid">Email invalid</string>
    <string name="error_password_invalid">Password invalid</string>
    <string name="login">Login</string>
    <string name="start">Start</string>
    <string name="cancel">Cancel</string>
    <string name="request_radio_meta">Request radio meta</string>
    <string name="auto_switch_open">Open</string>
    <string name="auto_switch_close">Close</string>
    <string name="auto_switch_label">Автоматическое распознование</string>
    <string name="volume">volume: </string>
    <string name="suss">Success!</string>
    <string name="error">Error</string>
    <string name="settings">Settings</string>
    <string name="about">О программе</string>
    <string name="themes">Темы</string>
    <string name="album">Альбом: </string> />

</resources>